feat: remove task from firestore

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 #Be sure to use your own Firebase API keys
-REACT_APP_APIKEY= "AIzaSyD1CWl8nCVehdqRlvluP5H3AArjIBusp9w"
-REACT_APP_AUTHDOMAIN="todo-app-6de95.firebaseapp.com"
-REACT_APP_PROJECTID="todo-app-6de95"
-REACT_APP_STORAGEBUCKET="todo-app-6de95.appspot.com"
-REACT_APP_MESSAGINGSENDERID="594240059426"
-REACT_APP_APPID="1:594240059426:web:411de6003cf3f3d799f27b"
+REACT_APP_APIKEY="PASTE YOUR VALUE HERE"
+REACT_APP_AUTHDOMAIN="PASTE YOUR VALUE HERE"
+REACT_APP_PROJECTID="PASTE YOUR VALUE HERE"
+REACT_APP_STORAGEBUCKET="PASTE YOUR VALUE HERE"
+REACT_APP_MESSAGINGSENDERID="PASTE YOUR VALUE HERE"
+REACT_APP_APPID="PASTE YOUR VALUE HERE"
